Bug 284181 - sorting package search results doesn't work
Summary: sorting package search results doesn't work
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: 1.2.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 294192 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-16 13:07 UTC by Glenn Holmer
Modified: 2012-02-25 22:52 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Glenn Holmer 2011-10-16 13:07:55 UTC
Version:           1.2.1 (using KDE 4.7.1) 
OS:                Linux

In Muon Package Manager, list of packages is no longer ordered correctly after invoking search.

Reproducible: Always

Steps to Reproduce:
0) start Muon package manager
1) enter search term
2) packages are not sorted correctly
3) click "Package" column; arrow changes direction but packages still aren't sorted correctly
4) remove search term; packages are now sorted correctly


Actual Results:  
It's not clear what order the packages are in.

Expected Results:  
Packages should be in order by package name.
Comment 1 Jonathan Thomas 2011-10-16 14:15:54 UTC
During searches, packages are sorted by search relevancy.
Comment 2 Glenn Holmer 2011-10-17 00:57:07 UTC
But what does that mean? How does it help me find a specific package I have searched for in a long list of results? Try the example of searching for "apache" and wanting to install apache, its documentation, and apachetop.
Comment 3 Franky 2011-10-25 17:22:23 UTC
The search results are confusing. Searching for „libre“ shows as second the package „vagalume“, wich do not have the string „libre“ in packagename or short description.

IMHO the relevancy may use the packagename as first relevance, wich means that packagenames containing the searchstring are displayed first. Searching for „libre” will then show packages like libreoffice-... Packages, that have the searchstring in the description would then appear at last in the list.

Searching for a packagename is IMHO the best way to find a specific package. If i search around for some packages that are „maybe“ usefull to me, i could use the kategorie filters. But maybe i am wrong :-)

As i am active at the german ubuntuusers-wiki (http://wiki.ubuntuusers.de), there are many wikipages that uses packagenames to show the users what they have to install. BTW: I am working on a wikipage about muon :-)

Greetings
Comment 4 Glenn Holmer 2011-11-04 12:48:10 UTC
I noticed this morning that searching for "vpnc" doesn't return any of the "kvpnc" packages, or vice-versa. Is the search itself using "relevancy" as well?
Comment 5 migrus123 2011-11-04 19:47:14 UTC
When you see the sort up/down arrow for the package column you expect it to sort by package name. Relevancy is not shown so it is not very easy to understand it sorts by that.

Not being able to sort by name makes it hard to find packages you know are there.

Relevancy should perhaps have its own column (say before package) and if I want to sort by relevancy I can select that column. The column could only show during a search or show something else during non-search.
Comment 6 michel.damiens 2011-11-28 15:54:23 UTC
confirm : always reproducible
Comment 7 Jonathan Thomas 2012-02-15 23:09:13 UTC
*** Bug 294192 has been marked as a duplicate of this bug. ***
Comment 8 Jonathan Thomas 2012-02-25 22:52:08 UTC
Git commit 3deb99a0a24b7a9838da7d9201f1210cfea48db2 by Jonathan Thomas.
Committed on 25/02/2012 at 23:50.
Pushed by jmthomas into branch 'master'.

If the user manually clicks the package name column header, sort alphabetically even if we are showing relevancy-based quicksearch results.
FIXED-IN:1.4

M  +8    -5    muon/PackageModel/PackageProxyModel.cpp
M  +1    -0    muon/PackageModel/PackageProxyModel.h
M  +9    -0    muon/PackageModel/PackageWidget.cpp
M  +1    -0    muon/PackageModel/PackageWidget.h

http://commits.kde.org/muon/3deb99a0a24b7a9838da7d9201f1210cfea48db2