If the user manually clicks the package name column header, sort alphabetically even if we are showing relevancy-based quicksearch results.

BUG:284181
FIXED-IN:1.4